--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -314,6 +314,7 @@ a {
   column-gap: 2rem;
   overflow: hidden;
 }
+/*rirpova*/
 #box_superiore {
   background-image: url(../../images//planet2.jpeg);
   background-size: 135rem;
