--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,6 +59,7 @@ html {
 body {
   font-family: var(--body-font);
   font-size: var(--normal-font-size);
+  cursor: default;
 }
 
 ul {
@@ -364,4 +365,50 @@ a {
 #btn:hover{
   box-shadow: 2px -2px 10px rgba(255, 255, 255, 0.3);
   cursor: pointer;
+}
+
+/*secondo box*/
+#box_secondo {
+  background-image: url(../../images/robot1.jpeg);
+  background-repeat: no-repeat;
+  background-size: 85rem;
+  background-position:0rem -20rem ;
+  flex-direction: row;
+  row-gap: 2rem;
+}
+/*INFO CONTINERS*/
+.info_container {
+  width: 20%;
+  height: 19rem;
+  border-radius: 18px;
+  margin-top: 10rem;
+  background-color: rgb(216, 216, 216);
+  padding: 0.5rem;
+  color: rgb(0,0,0);
+  display: flex;
+  flex-direction: column;
+  opacity: 80%;
+  align-items: center;
+  margin-left: 2rem;
+}
+.info_container #titolo {
+  font-size: 18pt;
+  font-weight: 600;
+  font-family: var(--font-estetico);
+}
+.info_container #testo {
+  height: 10rem;
+  padding: 1rem;
+  overflow:hidden;
+  text-align: justify;
+}
+.info_container #btn {
+  padding: 0.8rem;
+  position: relative;
+  width: 10rem;
+  top: 1rem;
+  border-radius: 11px;
+  border: none;
+  font-family: var(--text-main-font);
+  border: 0.5px solid rgb(122, 122, 122);
 }
